# gatekeeper

./: .gitignore  Dockerfile  Makefile  README.md  config.ini.example  docker-compose.yml  pyproject-client.toml  pyproject.toml  wsgi.py
database/: schema.sql
scripts/: ldap_fetch_user_details.py
src/gatekeeper/: __init__.py  app.py  cli.py  config.py  db.py  web.py
src/gatekeeper/blueprints/: __init__.py  admin_api_keys.py  admin_groups.py  admin_sql.py  admin_system.py  admin_user_properties.py  admin_users.py  api.py  auth.py
src/gatekeeper/client/: __init__.py  client.py  flask_integration.py  token.py
src/gatekeeper/client/backends/: __init__.py  base.py  http.py  local.py
src/gatekeeper/models/: __init__.py  api_key.py  app_setting.py  group.py  user.py  user_property.py
src/gatekeeper/services/: __init__.py  email_service.py  ldap_service.py  token_service.py
src/gatekeeper/static/css/: app.css
src/gatekeeper/static/js/: app.js
src/gatekeeper/templates/: base.html
src/gatekeeper/templates/admin/: api_key_row.html  api_keys.html  audit_log.html  group_form.html  group_members.html  group_members_list.html  groups.html  groups_table.html  index.html  sql.html  system.html  user_form.html  user_groups.html  user_groups_list.html  user_ldap_provision.html  user_properties.html  user_properties_list.html  user_properties_table.html  user_property_form.html  user_property_users.html  user_property_users_list.html  user_row.html  users.html  users_table.html
src/gatekeeper/templates/auth/: login.html  login_sent.html
src/gatekeeper_client/: __init__.py  client.py  flask_integration.py  models.py
src/gatekeeper_client/backends/: base.py  http.py  local.py
